<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rutgers Bus Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="go_button">Go!</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="title_activity_create_route">CreateRouteActivity</string>
    <string name="label_add_create_route">Add/Join Route</string>
    <string name="label_finish">Finish</string>
    <string name="title_activity_select_stop">SelectStopActivity</string>
    <string name="Label_selected_stops">Select Stops, Go Back</string>
    <string name="title_activity_view_routes">ViewRoutesActivity</string>

</resources>
