<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.rutgers.kashyap.rutgersbusservice.CreateRouteActivity.CreateRouteFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_add_create_route"
        android:id="@+id/create_custom_label"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_routes"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/create_custom_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/source"
        android:id="@+id/label_source"
        android:layout_below="@+id/spinner_routes"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_source"
        android:layout_below="@+id/label_source"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destination"
        android:id="@+id/label_destination"
        android:layout_below="@+id/spinner_source"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_destination"
        android:layout_below="@+id/label_destination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_create_route"
        android:id="@+id/button_create"
        android:layout_alignBottom="@+id/button_finish"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_finish"
        android:id="@+id/button_finish"
        android:layout_toEndOf="@+id/button_create"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button_create"
        android:layout_marginBottom="20dp"/>
    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/label_add"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/spinner_destination"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>-->

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner_destination"
        android:layout_above="@+id/button_create"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/scroll_result_layout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/label_add"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
        </ScrollView>

    </HorizontalScrollView>



</RelativeLayout>
